[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "reading-machine"
version = "0.0.3"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "A machine that reads texts analytically and syntopically."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
keywords = ["reading-machine"]
dependencies = [
    "pyyaml == 6.0.3",
    "click == 8.3.1"
]

[project.scripts]
reading-machine = "reading_machine.cli:run"

[project.urls]
"Homepage" = "https://github.com/machina-ratiocinatrix/reading-machine"

[dependency-groups]
dev = ["pytest>=8.0.0"]